--- a/MMonitor/MachineLearning/MachineLearning.csproj
+++ b/MMonitor/MachineLearning/MachineLearning.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{8E6F5C53-18E8-4406-8081-7AC8BAE4A165}</ProjectGuid>
+    <ProjectGuid>{9864F8BA-DF5F-4A82-841A-05431A0588FF}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>MMonitorLib</RootNamespace>
-    <AssemblyName>MMonitorLib</AssemblyName>
+    <RootNamespace>MachineLearning</RootNamespace>
+    <AssemblyName>MachineLearning</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -40,15 +40,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Entities\AbstractPublication.cs" />
-    <Compile Include="Entities\PageParsingRule.cs" />
-    <Compile Include="Entities\TheComment.cs" />
-    <Compile Include="Entities\ThePublication.cs" />
-    <Compile Include="Entities\TheSource.cs" />
-    <Compile Include="Entities\User.cs" />
-    <Compile Include="Enums\Evaluation.cs" />
-    <Compile Include="Enums\Langs.cs" />
-    <Compile Include="Enums\TheSourceType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
