--- a/MMonitor/SourcesUploader/App.config
+++ b/MMonitor/SourcesUploader/App.config
@@ -6,7 +6,7 @@
     <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net"/>
   </configSections>
   <appSettings>
-    <add key="file_with_sources" value="C:\Users\aryumin\Source\Repos\MMonitor\MMonitor\SourcesUploader\sources\sources3.txt"/>
+    <add key="file_with_sources" value="C:\Users\aryumin\Source\Repos\MMonitor\MMonitor\SourcesUploader\sources\ss.txt"/>
   </appSettings>
   <log4net>
     <root>
