--- a/MMonitor/MachineLearning/MachineLearning.csproj
+++ b/MMonitor/MachineLearning/MachineLearning.csproj
@@ -40,6 +40,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Classifier.cs" />
+    <Compile Include="Clusterisator.cs" />
     <Compile Include="LanguageIdentifier.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
