--- a/MMonitor/SourcesUploader/App.config
+++ b/MMonitor/SourcesUploader/App.config
@@ -20,7 +20,7 @@
       </layout>
     </appender>
     <appender name="MyFileAppender" type="log4net.Appender.FileAppender">
-      <file value="mmonitor.log" />
+      <file value="mmonitor_sources_uploader.log" />
       <appendToFile value="true" />
       <lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
       <layout type="log4net.Layout.PatternLayout">
