--- a/MMonitor/CentralServiceLib/app.config
+++ b/MMonitor/CentralServiceLib/app.config
@@ -10,8 +10,8 @@
             </serviceBehaviors>
         </behaviors>
         <services>
-            <service name="CentralServiceLib.TheSourcesService">
-                <endpoint address="" binding="netTcpBinding" contract="CentralServiceLib.ITheSourcesService">
+            <service name="CentralServiceLib.MMonitorService">
+                <endpoint address="" binding="netTcpBinding" contract="CentralServiceLib.IMMonitorService">
                     <identity>
                         <dns value="localhost" />
                     </identity>
@@ -19,33 +19,7 @@
                 <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
                 <host>
                     <baseAddresses>
-                        <add baseAddress="http://localhost:8733/ConductorService/" />
-                    </baseAddresses>
-                </host>
-            </service>
-            <service name="CentralServiceLib.IUsersService">
-                <endpoint address="" binding="netTcpBinding" contract="CentralServiceLib.IIUsersService">
-                    <identity>
-                        <dns value="localhost" />
-                    </identity>
-                </endpoint>
-                <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
-                <host>
-                    <baseAddresses>
-                        <add baseAddress="http://localhost:8733/IUsersService/" />
-                    </baseAddresses>
-                </host>
-            </service>
-            <service name="CentralServiceLib.PageParsingRulesService">
-                <endpoint address="" binding="netTcpBinding" contract="CentralServiceLib.IPageParsingRulesService">
-                    <identity>
-                        <dns value="localhost" />
-                    </identity>
-                </endpoint>
-                <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
-                <host>
-                    <baseAddresses>
-                        <add baseAddress="http://localhost:8733/PageParsingRulesService/" />
+                        <add baseAddress="http://localhost:8733/Design_Time_Addresses/CentralServiceLib/MMonitorService/" />
                     </baseAddresses>
                 </host>
             </service>
