--- a/MMonitor/MMonitorLib/MMonitorLib.csproj
+++ b/MMonitor/MMonitorLib/MMonitorLib.csproj
@@ -84,6 +84,10 @@
     <Compile Include="Migrations\201709231410337_Added_Country_Property_To_Source_And_Its_Table.Designer.cs">
       <DependentUpon>201709231410337_Added_Country_Property_To_Source_And_Its_Table.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201709271953270_db_updates.cs" />
+    <Compile Include="Migrations\201709271953270_db_updates.Designer.cs">
+      <DependentUpon>201709271953270_db_updates.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="MMonitorContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -110,6 +114,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201709231410337_Added_Country_Property_To_Source_And_Its_Table.resx">
       <DependentUpon>201709231410337_Added_Country_Property_To_Source_And_Its_Table.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201709271953270_db_updates.resx">
+      <DependentUpon>201709271953270_db_updates.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
