--- a/MMonitor/MMonitorLib/MMonitorLib.csproj
+++ b/MMonitor/MMonitorLib/MMonitorLib.csproj
@@ -88,6 +88,10 @@
     <Compile Include="Migrations\201709271953270_db_updates.Designer.cs">
       <DependentUpon>201709271953270_db_updates.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201709281914433_db_updates1.cs" />
+    <Compile Include="Migrations\201709281914433_db_updates1.Designer.cs">
+      <DependentUpon>201709281914433_db_updates1.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="MMonitorContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -117,6 +121,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201709271953270_db_updates.resx">
       <DependentUpon>201709271953270_db_updates.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201709281914433_db_updates1.resx">
+      <DependentUpon>201709281914433_db_updates1.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
